chore: initialize Express server with TypeScript

--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "prisma": "^6.9.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^22.15.30",
     "ts-node-dev": "^2.0.0",
